User johns
Date:

    Release Version 0.6.0
    Fixes text of EAC-3 pass-through setup.
    Try to start or connect to X11 server with -xx.
    Try to use HBR (High Bit-Rate) for EAC3.
    Improved pass-through (PCM+EAC3) support.
    Support VDR 1.7.36 new build system.
    Improves VDPAU display preemption handling.
    Add modifiers to X11 remote key names (from Sibbi).
    Add compatibility with >=ffmpeg 1.1.
    Adds PIP (Picture-in-Picture) support.
    Split mpeg packets in receiver thread.

User horchi
Date: Tue Jan  1 17:58:54 CET 2013

    Adds VDR SeduAtmo Plugin support.

User johns
Date: Tue Jan  1 15:21:28 CET 2013

    Support multiple streams with ScaleVideo.
    Makes 4:3 and 16:9 display format configurable.
    Don't use DVB display format.

User Zoolook
Date: Tue Jan  1 12:49:19 CET 2013

    Add support for new vdr ScaleVideo API.

User johns
Date: Tue Jan  1 12:40:12 CET 2013

    Add support for old PES HDTV recording.
    Disable trickspeed hack, to prevent ffmpeg crash.
    Makes X11 server arguments configurable.
    Add german translation.

User FireFly
Date: Sun Nov 18 21:15:50 CET 2012

    Add german translation.

User johns
Date: Thu Nov 15 22:28:55 CET 2012

    Release Version 0.5.2

User  maverick-me
Date: Mon Nov 5 23:13:42 CET 2012

    Fix 3d OSD position.

User  maverick-me
Date: Tue Oct 30 16:50:25 CET 2012

    Add support to change the OSD for 3d SBS/TB streams.

User johns
Date: Tue Oct 30 12:11:25 CEST 2012

    Use software decoder for still-pictures.
    Add Feature #1103: change audio devices without vdr restart.
    Fix bug #1089: Vdpau decoder used wrong number of mpeg reference frames.
    Fix bug: with some streams endless loop in pes audio parser.
    Report correct video size in cSoftHdDevice::GetVideoSize.
    Add picture adjustment support for vdpau.
    Revert "mpeg_vdpau" back to "mpegvideo_vdpau".
    Fix bug: Can't use software decoder with VDPAU.
    Resume plugin, if suspend control stops.